Changing fixed nav on mobile to be relative

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -2,10 +2,14 @@
 
 #navbar {
   width: 100%;
-  position: fixed;
+  position: relative;
   top: 0;
   overflow: hidden;
   z-index: 10;
+
+  @include tablet {
+    position: fixed;
+  }
 
   .navbar-content {
     margin: 25px;
